# Diner_vita

./: CMakeLists.txt  LICENSE  README.md
livearea/: template.xml
loader/: config.h  dialog.c  main.c  main.h  so_util.c  video_player.c
